--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,11 @@
   margin: 30px;
   flex-wrap: wrap;
 }
+.btn{
+  padding: 10px;
+  color: rgb(255, 255, 255);
+  margin: 10px;
+  background-color: #db7373;
+  border: solid 1px ;
+  cursor: pointer;
+}
